Add Auto-complete feature

--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
     </section>
     <div class="container">
       <div class="autocomplete"></div>
+      <div id="summary"></div>
     </div>
+
+
+
+    <!-- Scripts -->
     <script src="utils.js"></script>
+    <script src="autocomplete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
+
+
+<!-- HTML Template Area -->
